@@ -60,13 +60,17 @@ CR: Service: Review and optimization of CONNECT
 CR: Test: Review and optimization
     - Added option XMEX_DEBUG_MODE
       The activation of debug mode is primarily planned for unit tests and
-      enforces the auto incremental revision type. In addition, the headers
-      Hash-Request, Hash-Response and Hash-Storage are added to the response,
+      enforces the auto incremental revision type. In addition, the hashed
+      headers for request, response and storage are added to the response,
       which can be checked by the unit tests.
       TODO: Add description in manual
       TODO: Test
     - Switch to the use of XMEX_DEBUG_MODE
       TODO: Test
+    - Switch to new hashes in the response header
+      Trace-Request-Hash, Trace-Request-Header-Hash, Trace-Request-Data-Hash
+      Trace-Response-Hash, Trace-Response-Header-Hash, Trace-Response-Data-Hash
+      Trace-Storage-Hash
 
 1.3.1 20240801
 BF: Review: Optimization/Corrections
